[package]
name = "fluence-fork-libp2p-kad"
edition = "2018"
description = "Kademlia protocol for libp2p"
version = "0.29.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "libp2p_kad"

[dependencies]
arrayvec = "0.5.1"
bytes = "1"
either = "1.5"
fnv = "1.0"
asynchronous-codec = "0.6"
futures = "0.3.1"
log = "0.4"
libp2p-core = { version = "0.27.1", path = "../../core", package = "fluence-fork-libp2p-core" }
libp2p-swarm = { version = "0.28.0", path = "../../swarm", package = "fluence-fork-libp2p-swarm" }
prost = "0.7"
rand = "0.7.2"
sha2 = "0.9.1"
smallvec = "1.0"
wasm-timer = "0.2"
uint = "0.9"
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }
void = "1.0"
bs58 = "0.3.0"
derivative = "2.0.2"

trust-graph = {git = "https://github.com/fluencelabs/trust-graph.git", branch = "identity_rework"}
fluence-identity = {git = "https://github.com/fluencelabs/trust-graph.git", branch = "identity_rework", package = "fluence-identity"}
prometheus = "0.9.0"

[dev-dependencies]
futures-timer = "3.0"
libp2p-noise = { path = "../../transports/noise", package = "fluence-fork-libp2p-noise" }
libp2p-yamux = { path = "../../muxers/yamux", package = "fluence-fork-libp2p-yamux" }
quickcheck = "0.9.0"
env_logger = "0.7.1"

[build-dependencies]
prost-build = "0.7"


[package.metadata.workspaces]
independent = true
